# emojicopier

./: .gitignore  emojicopier.py  pyproject.toml
