[tool.poetry]
name = "emojicopier"
version = "0.1.0"
description = ""
authors = ["Ginger <75683114+gingerindustries@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
